# r0_demo

core/src/: lib.rs
host/: Cargo.toml
methods/: Cargo.toml
methods/guest/: Cargo.toml
