[package]
name = "risc0-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "multiply"
path = "src/bin/multiply.rs"

[[bin]]
name = "zklogin"
path = "src/bin/zklogin.rs"


[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
jwt-core = { path = "../../core/" }
base64 = "0.22.1"
thiserror = "1.0.69"
jwt-compact = { version = "0.8.0", features = ["rsa"] }
chrono = "0.4.38"